# serde

./: README.md
.github/workflows/: rsgx.yml
serde/: Cargo.toml
serde/src/: lib.rs
serde_derive/: Cargo.toml
serde_test/: Cargo.toml
serde_test/src/: configure.rs  de.rs  error.rs  lib.rs  ser.rs
test_suite/: Cargo.toml
test_suite/src/: lib.rs  test_annotations.rs  test_borrow.rs  test_de.rs  test_gen.rs  test_identifier.rs  test_ignored_any.rs  test_macros.rs  test_remote.rs  test_roundtrip.rs  test_ser.rs  test_serde_path.rs  test_value.rs
test_suite/src/bytes/: mod.rs
test_suite/src/unstable/: mod.rs
