[package]
name = "serde_test_suite"
version = "0.0.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
publish = false
#build = "build.rs"

[features]
expandtest = []
unstable = ["serde/unstable"]
with-testing = ["unstable"]

#[dependencies]
#serde = { path = "../serde" }

[build-dependencies]
#toolchain_find = "0.1"

[dependencies]
fnv = { version = "1.0", default-features = false }
#macrotest = "=1.0.0"
#rustversion = "1.0"
serde = { path = "../serde", features = ["rc", "derive"] }
serde_derive = { path = "../serde_derive", features = ["deserialize_in_place"] }
serde_test = { path = "../serde_test" }
#trybuild = "1.0"

[dependencies.inventory]
#optional    = true
version     = "0.1.6"

[dependencies.sgx_tstd]
git         = "https://github.com/apache/teaclave-sgx-sdk"
#optional    = true
rev         = "v1.1.2"

[dependencies.testing]
branch      = "rsgx1.1.2"
git         = "https://github.com/usccommunity/teaclave-testing"
#optional    = true
